--- a/config.toml
+++ b/config.toml
@@ -33,8 +33,8 @@ footnotereturnlinkcontents = "↩"
     url = "/index.xml"
 
 [params]
-    description = "A Hugo theme ported from the static site generator Ivy."
-    footer = "&copy; [Yihui Xie](https://yihui.name) 2017 | [Github](https://github.com/yihui) | [Twitter](https://twitter.com/xieyihui)"
+    description = "Juan's blog."
+    footer = "&copy; [Juan Xie](https://jxie.netlify.com/) 2019 | [Github](https://github.com/qibaotu) "
 
   highlightjsVersion = "9.12.0"
   highlightjsCDN = "//cdn.bootcss.com"
